# smolclaw

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  PROJECT_OUTLINE.md  README.md  about.txt  agentic-framework-research.md  agents.yaml  agentscope-vs-smolclaw.md  architecture.excalidraw  diagram.md  docker-compose.yml  pyproject.toml  pytest.ini  rebuild_rag.py  requirements.txt  smolclaw-spec.md
.obsidian/: workspace.json
agents/: article-template.md  coder.md  content-strategy.md  critic.md  editor.md  git_recovery.md  ideator.md  orchestrator.md  planner.md  researcher.md  reviewer.md  smolclaw.md  ticket_writer.md  write-marketing-content.md  writer.md
app/: agent_command.py  agent_config.py  agent_eval.py  agent_factory.py  agent_loop.py  aiosqlite_lifecycle.py  anthropic_llm.py  approvals.py  autopilot.py  behaviors.py  bm25_store.py  bootstrap.py  checkpoints.py  chunking.py  coding_lifecycle.py  command_adapters.py  command_policy.py  command_runner.py  context_assembly.py  context_builder.py  contradiction.py  definitions.py  diagnostics.py  doctor.py  document_manager.py  execution_grants.py  gateway.py  goal.py  goal_ledger.py  graph_store.py  hooks.py  ingestion.py  journal.py  lifecycle.py  lifecycle_hooks.py  llm.py  llm_base.py  logger.py  mcp_client.py  memory_coding_eval.py  (+43 more)
articles/: mcp-vs-skills-claude-codex.md
cli/: commands.py  main.py  tui.py
docs/: architecture-runtime.md  memory-evals.md  next-phase-implementation-design.md  reliability-roadmap.md  remaining-goal-notes.md  research-agentic-coding-harnesses.md  (+4 more)
(+343 files in other folders)
