[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolclaw"
version = "0.1.0"
description = "Memory-first agent CLI with persistent associative memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "networkx==3.6.1",
  "nltk==3.9.4",
  "numpy==2.4.4",
  "anthropic==0.95.0",
  "openai==2.31.0",
  "python-dotenv==1.2.2",
  "tiktoken==0.12.0",
  "aiolimiter==1.2.1",
  "aiosqlite==0.22.1",
  "typer==0.24.1",
  "rich==15.0.0",
  "prompt-toolkit==3.0.52",
  "httpx==0.28.1",
  "pyyaml==6.0.3",
  "websockets==15.0.1",
  "pydantic==2.13.0",
  "opentelemetry-api==1.41.0",
  "opentelemetry-sdk==1.41.0",
  "opentelemetry-exporter-otlp-proto-http==1.41.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==0.26.0",
]

[project.scripts]
smolclaw = "cli.main:entrypoint"

[tool.setuptools]
packages = ["app", "app.tools", "cli"]
